digs on body cause block alignment issues in Chrome

--- a/scss/framework/elements/_headings.scss
+++ b/scss/framework/elements/_headings.scss
@@ -18,6 +18,11 @@ h6,
     font-family: $heading-font-family;
     font-weight: $heading-font-weight;
     text-rendering :optimizelegibility;
+    -moz-font-feature-settings: "liga=1, dlig=1";
+    -ms-font-feature-settings: "liga" 1, "dlig" 1;
+    -o-font-feature-settings: "liga" 1, "dlig" 1;
+    -webkit-font-feature-settings: "liga" 1, "dlig" 1;
+    font-feature-settings: "liga" 1, "dlig" 1;
 }
 
 /* Heading sizes are set with a mixin to maintain vertical rhythm. */
